# openclaw-voice-server

./: .env.example  .gitignore  README.md  pyproject.toml
clients/windows/: README.md  package.json
clients/windows/scripts/: generate_icons.py
clients/windows/src-tauri/: Cargo.toml  tauri.conf.json
clients/windows/src-tauri/src/: lib.rs  main.rs
src/openclaw_voice_server/: __init__.py  __main__.py  app.py  calibrate_commands.py  catalog.py  config.py  config_store.py  errors.py  gateway.py  installer.py  runtime.py  service.py  setup_service.py  stt.py  text.py  tts.py  windows_client_state.py
src/openclaw_voice_server/providers/: __init__.py  stt.py  tts.py
src/openclaw_voice_server/static/: index.html  record.html  setup.html  voice.html
tests/: test_calibrate_commands.py  test_config_store.py  test_gateway.py  test_providers.py  test_runtime.py  test_setup_service.py  test_text.py  test_voice_page.py  test_windows_client_state.py
