[package]
name = "openclaw-voice-windows-client"
version = "0.1.0"
description = "Tauri Windows client for the OpenClaw voice server."
authors = ["OpenClaw contributors"]
edition = "2021"

[lib]
name = "openclaw_voice_windows_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
url = "2"
webbrowser = "1"
